ingress/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-version-v2-deployment
  labels:
    app: node-version
    version: v2
spec:
  # modify replicas according to your case
  replicas: 1
  selector:
    matchLabels:
      app: node-version
      version: v2
  template:
    metadata:
      labels:
        app: node-version
        version: v2
    spec:
      containers:
        - name: node-version
          image: jainishshah17/node-version:2.3.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: "200Mi"
              cpu: "200m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              port: 3000
              path: /
              scheme: HTTP
            failureThreshold: 5
            successThreshold: 2
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              port: 3000
              path: /
              scheme: HTTP
            failureThreshold: 5
            successThreshold: 1
            initialDelaySeconds: 30
