ingress/service-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: node-version-v1-service
spec:
  selector:
    app: node-version
    version: v1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
