ingress/service-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: node-version-v2-service
spec:
  selector:
    app: node-version
    version: v2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
