ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-version-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: v1.jainishshah.com
      http:
        paths:
          - backend:
              serviceName: node-version-v1-service
              servicePort: 80
            path: /
    - host: v2.jainishshah.com
      http:
        paths:
          - backend:
              serviceName: node-version-v2-service
              servicePort: 80
            path: /
